Make ice cream parrot live!

--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -44,3 +44,5 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/explodyparrot.gif'
   - name: shufflepartyparrot
     src: 'http://cultofthepartyparrot.com/parrots/shufflepartyparrot.gif'
+  - name: ice-cream-parrot
+    src: 'http://cultofthepartyparrot.com/parrots/ice-cream-parrot.gif'
