Updated parrot list.

--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -46,3 +46,21 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/shufflepartyparrot.gif'
   - name: ice-cream-parrot
     src: 'http://cultofthepartyparrot.com/parrots/ice-cream-parrot.gif'
+  - name: aussiecongaparrot
+    src: 'http://cultofthepartyparrot.com/parrots/aussiecongaparrot.gif'
+  - name: aussiereversecongaparrot
+    src: 'http://cultofthepartyparrot.com/parrots/aussiereversecongaparrot.gif'
+  - name: parrotwave1
+    src: 'http://cultofthepartyparrot.com/parrots/parrotwave1.gif'
+  - name: parrotwave2
+    src: 'http://cultofthepartyparrot.com/parrots/parrotwave2.gif'
+  - name: parrotwave3
+    src: 'http://cultofthepartyparrot.com/parrots/parrotwave3.gif'
+  - name: parrotwave4
+    src: 'http://cultofthepartyparrot.com/parrots/parrotwave4.gif'
+  - name: parrotwave5
+    src: 'http://cultofthepartyparrot.com/parrots/parrotwave5.gif'
+  - name: parrotwave6
+    src: 'http://cultofthepartyparrot.com/parrots/parrotwave6.gif'
+  - name: parrotwave7
+    src: 'http://cultofthepartyparrot.com/parrots/parrotwave7.gif'
