--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -24,8 +24,6 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/reversecongaparrot.gif'
   - name: partyparrot
     src: 'http://cultofthepartyparrot.com/parrots/partyparrot.gif'
-    name: pizzaparrot
-    src: 'http://cultofthepartyparrot.com/parrots/pizzaparrot.gif'
   - name: sadparrot
     src: 'http://cultofthepartyparrot.com/parrots/sadparrot.gif'
   - name: parrotcop
@@ -40,6 +38,8 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/dealwithitparrot.gif'
   - name: fiestaparrot
     src: 'http://cultofthepartyparrot.com/parrots/fiestaparrot.gif'
+  - name: pizzaparrot
+    src: 'http://cultofthepartyparrot.com/parrots/pizzaparrot.gif'
   - name: chillparrot
     src: 'http://cultofthepartyparrot.com/parrots/chillparrot.gif'
   - name: explodyparrot
