--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -40,6 +40,8 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/fiestaparrot.gif'
   - name: pizzaparrot
     src: 'http://cultofthepartyparrot.com/parrots/pizzaparrot.gif'
+  - name: hamburgerparrot
+    src: 'http://cultofthepartyparrot.com/parrots/hamburgerparrot.gif'    
   - name: chillparrot
     src: 'http://cultofthepartyparrot.com/parrots/chillparrot.gif'
   - name: explodyparrot
