--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -76,3 +76,5 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/congapartyparrot.gif'
   - name: moonwalkingparrot
     src: 'http://cultofthepartyparrot.com/parrots/moonwalkingparrot.gif'
+  - name: rainyparrot
+    src: 'http://cultofthepartyparrot.com/parrots/rainyparrot.gif'
