Add party pooper parrot

--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -78,3 +78,5 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/moonwalkingparrot.gif'
   - name: parrotmustache
     src: 'http://cultofthepartyparrot.com/parrots/parrotmustache.gif'
+  - name: partypooperparrot
+    src: 'http://cultofthepartyparrot.com/parrots/partypooperparrot.gif'
