added witness protection parrot... shhh

--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -82,3 +82,5 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/parrotmustache.gif'
   - name: christmasparrot
     src: 'http://cultofthepartyparrot.com/parrots/christmasparrot.gif'
+  - name: witnessprotectionparrot
+    src: 'http://cultofthepartyparrot.com/parrots/witnessprotectionparrot.gif'
