--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -84,3 +84,5 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/christmasparrot.gif'
   - name: witnessprotectionparrot
     src: 'http://cultofthepartyparrot.com/parrots/witnessprotectionparrot.gif'
+  - name: parrotsleep
+    src: 'http://cultofthepartyparrot.com/parrots/parrotsleep.gif'
