--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -84,3 +84,7 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/christmasparrot.gif'
   - name: witnessprotectionparrot
     src: 'http://cultofthepartyparrot.com/parrots/witnessprotectionparrot.gif'
+  - name: parrotsleep
+    src: 'http://cultofthepartyparrot.com/parrots/parrotsleep.gif'
+  - name: parrotbeer
+    src: 'http://cultofthepartyparrot.com/parrots/parrotbeer.gif'
