Updated README, yaml and HTML.

--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -94,8 +94,8 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/blondesassyparrot.gif'
   - name: bluecluesparrot
     src: 'http://cultofthepartyparrot.com/parrots/bluecluesparrot.gif'
-  - name: gentlemenparrot
-    src: 'http://cultofthepartyparrot.com/parrots/gentlemenparrot.gif'
+  - name: gentlemanparrot
+    src: 'http://cultofthepartyparrot.com/parrots/gentlemanparrot.gif'
   - name: magaritaparrot
     src: 'http://cultofthepartyparrot.com/parrots/magaritaparrot.gif'
   - name: oriolesparrot
