--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -100,3 +100,5 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/magaritaparrot.gif'
   - name: oriolesparrot
     src: 'http://cultofthepartyparrot.com/parrots/oriolesparrot.gif'
+  - name: harrypotterparrot
+    src: 'http://cultofthepartyparrot.com/parrots/harrypotterparrot.gif'
