Larger dreidel, and add it to the site.
Dreidel, dreidel, dreidel,
I made you out of clay.
And when you’re dry and ready,
I'll party all the day!

--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -100,3 +100,5 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/magaritaparrot.gif'
   - name: oriolesparrot
     src: 'http://cultofthepartyparrot.com/parrots/oriolesparrot.gif'
+  - name: dreidelparrot
+    src: 'http://cultofthepartyparrot.com/parrots/dreidelparrot.gif'
