Harry Potter Parrot (#62)
* Harry Potter Parrot

--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -102,3 +102,5 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/oriolesparrot.gif'
   - name: dreidelparrot
     src: 'http://cultofthepartyparrot.com/parrots/dreidelparrot.gif'
+  - name: harrypotterparrot
+    src: 'http://cultofthepartyparrot.com/parrots/harrypotterparrot.gif'
