--- a/parrotparty.yaml
+++ b/parrotparty.yaml
@@ -112,3 +112,5 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/twinsparrot.gif'
   - name: tripletsparrot
     src: 'http://cultofthepartyparrot.com/parrots/tripletsparrot.gif'
+  - name: stableparrot
+    src: 'http://cultofthepartyparrot.com/parrots/stableparrot.gif'
