--- a/templates/parrotparty.yaml
+++ b/templates/parrotparty.yaml
@@ -1,6 +1,7 @@
 title: parrotparty
 emojis:
 {{#parrots}}
-  - name: {{name}}
+  - name: {{slack_name}}
     src: 'http://cultofthepartyparrot.com/parrots/{{gif}}'
+    fullname: {{name}}
 {{/parrots}}
