HD parrots in templates.

--- a/templates/parrotparty.yaml
+++ b/templates/parrotparty.yaml
@@ -2,6 +2,6 @@ title: parrotparty
 emojis:
 {{#parrots}}
   - name: {{slack_name}}
-    src: 'http://cultofthepartyparrot.com/parrots/{{gif}}'
+    src: 'http://cultofthepartyparrot.com/parrots/{{#hd}}{{{hd}}}{{/hd}}{{^hd}}{{gif}}{{/hd}}'
     fullname: {{name}}
 {{/parrots}}
