--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/jmhobbs/cultofthepartyparrot.com#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "convert-units": "^2.1.0",
     "gulp": "^3.9.1",
     "gulp-data": "^1.2.1",
     "gulp-imagemin": "^3.1.1",
