--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: node_js
 install:
   - npm install -g mocha
   - npm install chai jsonschema
+  - npm install convert-units
 script: "mocha"
