--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 install:
-  - npm install -g mocha
+  - npm install -g mocha@"^3.5.3"
   - npm install chai jsonschema
   - npm install convert-units
 script: "mocha"
