:tada: Add guests to parrotparty.yaml

--- a/templates/parrotparty.yaml
+++ b/templates/parrotparty.yaml
@@ -5,3 +5,8 @@ emojis:
     src: 'http://cultofthepartyparrot.com/parrots/{{#hd}}{{{hd}}}{{/hd}}{{^hd}}{{gif}}{{/hd}}'
     fullname: {{name}}
 {{/parrots}}
+{{#guests}}
+  - name: {{slack_name}}
+    src: 'http://cultofthepartyparrot.com/guests/{{#hd}}{{{hd}}}{{/hd}}{{^hd}}{{gif}}{{/hd}}'
+    fullname: {{name}}
+{{/guests}}
