--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.1.0",
   "description": "PARTY OR DIE",
   "scripts": {
-    "test": "gulp test",
-    "build": "gulp build"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
