--- a/guests.yaml
+++ b/guests.yaml
@@ -77,3 +77,5 @@
 - gif: threadparrot.gif
   name: Thread Parrot
   tip: Ctrl + Shift + \\, 'Threa... FFFFFFFUUUUUUUUUUUU
+- gif: thegrokeparrot.gif
+  name: The Groke Parrot
