--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "convert-units": "^2.3.4",
     "gulp": "^4.0.2",
     "gulp-data": "^1.3.1",
-    "gulp-mocha": "^7.0.1",
+    "gulp-mocha": "^7.0.2",
     "gulp-mustache": "^4.1.2",
-    "image-size": "^0.7.4",
-    "imagemin-cli": "^5.0.0",
+    "image-size": "^0.7.5",
+    "imagemin-cli": "^5.1.0",
     "imagemin-gifsicle": "^6.0.1",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-pngcrush": "^6.0.0",
-    "imagemin-svgo": "^7.0.0",
+    "imagemin-svgo": "^7.1.0",
     "js-yaml": "^3.13.1",
-    "jsonschema": "^1.2.4",
+    "jsonschema": "^1.2.5",
+    "minimist": ">=1.2.3",
     "path": "^0.12.7",
-    "uglify-js": "^3.6.0",
-    "uglifycss": "^0.0.29",
-    "minimist": ">=1.2.3"
+    "uglify-js": "^3.8.0",
+    "uglifycss": "^0.0.29"
   }
 }
