--- a/parrots.yaml
+++ b/parrots.yaml
@@ -375,3 +375,5 @@
 - hd: hd/covid19parrot.gif
   name: COVID-19 Parrot
   tip: Parrot takes a break from partying to socially distance
+- gif: metalparrot.gif
+  name: Metal Parrot
