--- a/parrots.yaml
+++ b/parrots.yaml
@@ -375,3 +375,6 @@
 - hd: hd/covid19parrot.gif
   name: COVID-19 Parrot
   tip: Parrot takes a break from partying to socially distance
+- hd: hd/wineparrot.gif
+  name: Wine Parrot
+  tip: Parrot and a Pinot
