--- a/guests.yaml
+++ b/guests.yaml
@@ -64,6 +64,6 @@
   name: Party Blob Cat
 - gif: cursedparrot.gif
   name: Cursed Parrot
-- hd: partyannoyedbird.gif
+- hd: hd/partyannoyedbird.gif
   name: Party Annoyed Bird
   tip: When you're annoyed but it's party time
