Add party annoyed bird (#454)
* Add party annoyed bird
* HD!

--- a/guests.yaml
+++ b/guests.yaml
@@ -64,3 +64,6 @@
   name: Party Blob Cat
 - gif: cursedparrot.gif
   name: Cursed Parrot
+- hd: hd/partyannoyedbird.gif
+  name: Party Annoyed Bird
+  tip: When you're annoyed but it's party time
