--- a/parrots.yaml
+++ b/parrots.yaml
@@ -378,3 +378,11 @@
 - hd: hd/wineparrot.gif
   name: Wine Parrot
   tip: Parrot and a Pinot
+- hd: hd/everythingsfineparrot.gif
+  name: Everything Is Fine Parrot
+  tip: It's really not
+- hd: hd/metalparrot.gif
+  name: Metal Parrot
+- hd: hd/tpparrot.gif
+  name: TP Parrot
+  tip: Don't Hoard, ppl
