Add a Preet Bharara parrot. For Justice.
A.K.A. "Stay Tuned Parrot"
"It's Parakeet Bharara..."

--- a/guests.yaml
+++ b/guests.yaml
@@ -67,3 +67,6 @@
 - hd: hd/partyannoyedbird.gif
   name: Party Annoyed Bird
   tip: When you're annoyed but it's party time
+- hd: hd/preetjusticeparrot.gif
+  name: Preet Justice Parrot
+  tip: Doin' Justice
