--- a/parrots.yaml
+++ b/parrots.yaml
@@ -378,3 +378,6 @@
 - hd: hd/wineparrot.gif
   name: Wine Parrot
   tip: Parrot and a Pinot
+- hd: hd/moonparrot.gif
+  name: Moon Parrot
+  tip: Parrot and the moon
