Rename metal parrot.

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -381,8 +381,8 @@
 - hd: hd/everythingsfineparrot.gif
   name: Everything Is Fine Parrot
   tip: It's really not
-- hd: hd/metalparrot.gif
-  name: Metal Parrot
+- hd: hd/headbangingparrot.gif
+  name: Head Banging Parrot
 - hd: hd/tpparrot.gif
   name: TP Parrot
   tip: Don't Hoard, ppl
