Adds Everything's Fine (flaming), Metal (headbanging), & TP (hoarding) (#457)
* Adds Everything's Fine (flaming), Metal (headbanging), & TP (hoarding)
HD parrots

* Rename metal parrot.

Co-authored-by: Dan Ryder <dan.ryder@maxar.com>
Co-authored-by: John Hobbs <john@velvetcache.org>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -378,3 +378,11 @@
 - hd: hd/wineparrot.gif
   name: Wine Parrot
   tip: Parrot and a Pinot
+- hd: hd/everythingsfineparrot.gif
+  name: Everything Is Fine Parrot
+  tip: It's really not
+- hd: hd/headbangingparrot.gif
+  name: Head Banging Parrot
+- hd: hd/tpparrot.gif
+  name: TP Parrot
+  tip: Don't Hoard, ppl
