Add Metal parrot (#449)
Co-authored-by: Jason Pettett <jason.pettett@wspdigital.com>
Co-authored-by: John Hobbs <john@velvetcache.org>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -375,6 +375,8 @@
 - hd: hd/covid19parrot.gif
   name: COVID-19 Parrot
   tip: Parrot takes a break from partying to socially distance
+- gif: metalparrot.gif
+  name: Metal Parrot
 - hd: hd/wineparrot.gif
   name: Wine Parrot
   tip: Parrot and a Pinot
