--- a/parrots.yaml
+++ b/parrots.yaml
@@ -388,3 +388,6 @@
 - hd: hd/tpparrot.gif
   name: TP Parrot
   tip: Don't Hoard, ppl
+- hd: hd/rubyparrot.gif
+  name: Ruby Parrot
+  top: This Parrot surely loves gems
