--- a/parrots.yaml
+++ b/parrots.yaml
@@ -390,4 +390,4 @@
   tip: Don't Hoard, ppl
 - hd: hd/rubyparrot.gif
   name: Ruby Parrot
-  top: This Parrot surely loves gems
+  tip: This Parrot surely loves gems
