--- a/parrots.yaml
+++ b/parrots.yaml
@@ -388,3 +388,15 @@
 - hd: hd/tpparrot.gif
   name: TP Parrot
   tip: Don't Hoard, ppl
+- hd: hd/stayhomeparrot.gif
+  name: Stay Home Parrot
+  tip: He's in there
+- hd: hd/stayhomeparrotcloser.gif
+  name: Stay Home Parrot Closer
+  tip: See I told you
+- hd: hd/stayhomeparrotwindow.gif
+  name: Stay Home Parrot Window
+  tip: Get off my lawn
+- hd: hd/staytfhomeparrot.gif
+  name: Stay TF Home Parrot
+  tip: Can I help you?
