--- a/parrots.yaml
+++ b/parrots.yaml
@@ -391,3 +391,6 @@
 - hd: hd/rubyparrot.gif
   name: Ruby Parrot
   tip: This Parrot surely loves gems
+- hd: hd/moonparrot.gif
+  name: Moon Parrot
+  tip: Parrot and the moon
