Added docparrot.gif Updated parrots.yaml

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -363,7 +363,7 @@
   name: async Parrot
 - hd: hd/meldparrot.gif
   name: Meld Parrot
-- gif: docparrot.gif
+- hd: hd/docparrot.gif
   name: Doc Parrot
   tip: Or any medical professional really...
 - hd: hd/rythmicalparrot.gif
