Created Hmm Parrot 🤔

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -413,6 +413,9 @@
 - hd: hd/moonparrot.gif
   name: Moon Parrot
   tip: Parrot and the moon
+- hd: hd/hmmparrot.gif
+  name: Hmm Parrot
+  tip: Hmmmmm...
 - hd: hd/nodeparrot.gif
   name: Node Parrot
   tip: party.on("end",e => {die()})
