add daft punk parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -394,3 +394,6 @@
 - hd: hd/moonparrot.gif
   name: Moon Parrot
   tip: Parrot and the moon
+- hd: hd/daftpunkparrot.gif
+  name: Daft Punk Parrot
+  tip: Harder Better Faster Stronger
