--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "minimist": ">=1.2.3",
     "path": "^0.12.7",
     "uglify-js": "^3.8.0",
-    "uglifycss": "^0.0.29"
+    "uglifycss": "^0.0.29",
+    "yamljs": "^0.3.0"
   }
 }
