add daft punk parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -422,4 +422,6 @@
 - hd: hd/hanamiparrot.gif
   name: Hanami Parrot
   tip: Very beautiful
-
+- hd: hd/daftpunkparrot.gif
+  name: Daft Punk Parrot
+  tip: Harder Better Faster Stronger
