--- a/parrots.yaml
+++ b/parrots.yaml
@@ -54,11 +54,11 @@
 - gif: fiestaparrot.gif
   name: Fiesta Parrot
 - gif: pizzaparrot.gif
-  name: ! "\U0001F355 Parrot"
+  name: !!str "\U0001F355 Parrot"
 - gif: hamburgerparrot.gif
-  name: ! "\U0001F354 Parrot"
+  name: !!str "\U0001F354 Parrot"
 - gif: bananaparrot.gif
-  name: ! "\U0001F34C Parrot"
+  name: !!str "\U0001F34C Parrot"
 - gif: chillparrot.gif
   name: Chill Parrot
 - gif: explodyparrot.gif
