add daft punk parrot (#472)
* add daft punk parrot

Co-authored-by: guiprou <guillaume.prou@ericsson.com>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -424,4 +424,6 @@
   tip: Very beautiful
 - gif: revertitparrot.gif
   name: Revert It Parrot
-
+- hd: hd/daftpunkparrot.gif
+  name: Daft Punk Parrot
+  tip: Harder Better Faster Stronger
