--- a/parrots.yaml
+++ b/parrots.yaml
@@ -427,3 +427,5 @@
 - hd: hd/daftpunkparrot.gif
   name: Daft Punk Parrot
   tip: Harder Better Faster Stronger
+  - hd: hd/socialdistanceparrot.gif
+  name: Social Distance Parrot
