add zouk parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -427,3 +427,6 @@
 - hd: hd/daftpunkparrot.gif
   name: Daft Punk Parrot
   tip: Harder Better Faster Stronger
+- hd: hd/zoukparrot.gif
+  name: Zouk Parrot
+  tip: Parrot turned tropical
