--- a/parrots.yaml
+++ b/parrots.yaml
@@ -430,3 +430,6 @@
 - hd: hd/zoukparrot.gif
   name: Zouk Parrot
   tip: Parrot turned tropical
+- hd: hd/peekparrot.gif
+  name: Glinpse Parrot
+  tip: A glimpse from the wall
