Added Glimpse Parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -430,6 +430,6 @@
 - hd: hd/zoukparrot.gif
   name: Zouk Parrot
   tip: Parrot turned tropical
-- hd: hd/peekparrot.gif
+- hd: hd/glimpseparrot.gif
   name: Glinpse Parrot
   tip: A glimpse from the wall
