Added Glimpse Parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -431,5 +431,5 @@
   name: Zouk Parrot
   tip: Parrot turned tropical
 - hd: hd/glimpseparrot.gif
-  name: Glinpse Parrot
+  name: Glimpse Parrot
   tip: A glimpse from the wall
