Jumping Parrot & Jumping Parrot Jr.

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -433,3 +433,8 @@
 - hd: hd/glimpseparrot.gif
   name: Glimpse Parrot
   tip: A glimpse from the wall
+- hd: hd/jumpingparrot.gif
+  name: Gots some hops
+- hd: hd/jumpingparrotjr.gif
+  name: Jr. Bounce Parrot
+  tip: Aww hey little fella
