--- a/parrots.yaml
+++ b/parrots.yaml
@@ -433,3 +433,5 @@
 - hd: hd/glimpseparrot.gif
   name: Glimpse Parrot
   tip: A glimpse from the wall
+- hd: hd/quadparrot.gif
+  name: Quad Parrot
