--- a/parrots.yaml
+++ b/parrots.yaml
@@ -433,3 +433,6 @@
 - hd: hd/glimpseparrot.gif
   name: Glimpse Parrot
   tip: A glimpse from the wall
+- hd: hd/dailyparrot.gif
+  name: Daily Parrot
+  tip: A parrot to announce daily meetings
