Added Dab Parrot (#489)
* Added dabparrot.gif
* Added dabparrot.gif to parrots.yaml.

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -433,6 +433,8 @@
 - hd: hd/glimpseparrot.gif
   name: Glimpse Parrot
   tip: A glimpse from the wall
+- gif: dabparrot.gif
+  name: Dab Parrot
 - hd: hd/jumpingparrot.gif
   name: Gots some hops
 - hd: hd/jumpingparrotjr.gif
