Add Quad Parrot (#486)
* Create quadparrot.gif

* Update parrots.yaml

* Update quadparrot.gif

now they can loop

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -433,6 +433,8 @@
 - hd: hd/glimpseparrot.gif
   name: Glimpse Parrot
   tip: A glimpse from the wall
+- hd: hd/quadparrot.gif
+  name: Quad Parrot
 - gif: dabparrot.gif
   name: Dab Parrot
 - hd: hd/jumpingparrot.gif
