add pokeparrot to yaml

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -442,3 +442,6 @@
 - hd: hd/jumpingparrotjr.gif
   name: Jr. Bounce Parrot
   tip: Aww hey little fella
+- hd: hd/pokeparrot.gif
+  name: 151 Pokémon Parrot
+  tip: One Hundred Fifty-One Parrot
