--- a/parrots.yaml
+++ b/parrots.yaml
@@ -441,4 +441,6 @@
   name: Gots some hops
 - hd: hd/jumpingparrotjr.gif
   name: Jr. Bounce Parrot
+- hd: hd/cakeparrot.gif
+  name: Cake Parrot
   tip: Aww hey little fella
