--- a/guests.yaml
+++ b/guests.yaml
@@ -70,3 +70,5 @@
 - hd: hd/preetjusticeparrot.gif
   name: Preet Justice Parrot
   tip: Doin' Justice
+- hd: hd/partywumpus.gif
+  name: Party Wumpus Parrot
