Added Cake Parrot (#491)
* Add files via upload

* Add files via upload

Co-authored-by: KobayashiGifmagazine <68264137+KobayashiGifmagazine@users.noreply.github.com>
Co-authored-by: John Hobbs <john@velvetcache.org>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -445,3 +445,5 @@
 - hd: hd/pokeparrot.gif
   name: 151 Pokémon Parrot
   tip: One Hundred Fifty-One Parrot
+- hd: hd/cakeparrot.gif
+  name: Cake Parrot
