--- a/parrots.yaml
+++ b/parrots.yaml
@@ -447,3 +447,5 @@
   tip: One Hundred Fifty-One Parrot
 - hd: hd/cakeparrot.gif
   name: Cake Parrot
+- gif: unicornparrot.gif
+  name: Unicorn Parrot
