added the fastest parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -452,3 +452,5 @@
   name: Cake Parrot
 - gif: unicornparrot.gif
   name: Unicorn Parrot
+- gif: hd/thefastestparrot.gif
+  name: The Fastest Parrot
