--- a/parrots.yaml
+++ b/parrots.yaml
@@ -455,3 +455,5 @@
 - hd: hd/thefastestparrot.gif
   name: The Fastest Parrot
   tip: Really fast
+- hd: hd/catchballparrot.gif
+  name: Catch ball Parrot
