--- a/parrots.yaml
+++ b/parrots.yaml
@@ -455,5 +455,7 @@
 - hd: hd/thefastestparrot.gif
   name: The Fastest Parrot
   tip: Really fast
-- hd: hd/catchballparrot.gif
-  name: Catch ball Parrot
+- hd: hd/playcatchleftparrot.gif
+  name: Catch ball Left Parrot
+- hd: hd/playcatchrightparrot.gif
+  name: Catch ball Right Parrot
