Fix parrot put in the wrong place.

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -459,3 +459,5 @@
   name: Catch ball Left Parrot
 - hd: hd/playcatchrightparrot.gif
   name: Catch ball Right Parrot
+- hd: hd/biparrot.gif
+  name: Bi Parrot
