Adding Imposter Parrot to parrots.yaml
There is one imposter among us

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -459,3 +459,6 @@
   name: Catch ball Left Parrot
 - hd: hd/playcatchrightparrot.gif
   name: Catch ball Right Parrot
+- hd: hd/imposterparrot.gif
+  name: Imposter Parrot
+  tip: Looks kinda sus
