Adding an Imposter Parrot (#505)
* Adding Imposter Parrot

Reference to the game Among Us

* Adding Imposter Parrot to parrots.yaml

There is one imposter among us

Co-authored-by: John Hobbs <john@velvetcache.org>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -461,3 +461,6 @@
   name: Catch ball Right Parrot
 - hd: hd/biparrot.gif
   name: Bi Parrot
+- hd: hd/imposterparrot.gif
+  name: Imposter Parrot
+  tip: Looks kinda sus
