--- a/parrots.yaml
+++ b/parrots.yaml
@@ -464,6 +464,6 @@
 - hd: hd/imposterparrot.gif
   name: Imposter Parrot
   tip: Looks kinda sus
-- gif: italianparrot.gif
-  name: Italian parrot
-  tip: Mamma mia pizzeria
+- gif: chefparrot.gif
+  name: Chef parrot
+  tip: Cooking parrot
