--- a/guests.yaml
+++ b/guests.yaml
@@ -72,3 +72,5 @@
   tip: Doin' Justice
 - hd: hd/partywumpus.gif
   name: Party Wumpus Parrot
+- hd: hd/thisisfineparrot.gif
+  name: This is Fine Parrot
