--- a/parrots.yaml
+++ b/parrots.yaml
@@ -467,3 +467,6 @@
 - gif: chefparrot.gif
   name: Chef parrot
   tip: Cooking parrot
+- gif: turndownforwatchparrot.gif
+  name: Turn Down for Watch
+  tip: Very crazy parrot
