--- a/parrots.yaml
+++ b/parrots.yaml
@@ -467,3 +467,9 @@
 - gif: chefparrot.gif
   name: Chef parrot
   tip: Cooking parrot
+  gif: movinparots.gif
+  name: moving parrot
+  tip: catching up with other parrots
+
+
+  
