--- a/parrots.yaml
+++ b/parrots.yaml
@@ -467,9 +467,9 @@
 - gif: chefparrot.gif
   name: Chef parrot
   tip: Cooking parrot
-  gif: movinparots.gif
-  name: moving parrot
-  tip: catching up with other parrots
+  gif: appleparrots.gif
+  name: apple parrot
+  tip: contesting
 
 
   
