--- a/parrots.yaml
+++ b/parrots.yaml
@@ -467,9 +467,6 @@
 - gif: chefparrot.gif
   name: Chef parrot
   tip: Cooking parrot
-  gif: appleparrots.gif
-  name: apple parrot
-  tip: contesting
-
-
+  gif: pear-parrots.gif
+  name: Pear Parrots
   
