--- a/parrots.yaml
+++ b/parrots.yaml
@@ -467,6 +467,5 @@
 - gif: chefparrot.gif
   name: Chef parrot
   tip: Cooking parrot
-  gif: pear-parrots.gif
+- gif: pear-parrots.gif
   name: Pear Parrots
-  
