Add Tin foil hat Parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -469,3 +469,5 @@
   tip: Cooking parrot
 - gif: pear-parrots.gif
   name: Pear Parrots
+- hd: hd/tinfoilhatparrot.gif
+  name: Tin foil hat Parrot
