Enhancement for Thread Parrot via @CuteLifeBot

--- a/guests.yaml
+++ b/guests.yaml
@@ -74,3 +74,6 @@
   name: Party Wumpus Parrot
 - hd: hd/thisisfineparrot.gif
   name: This is Fine Parrot
+- gif: threadparrot.gif
+  name: Thread Parrot
+  tip: Ctrl + Shift + \\, 'Threa... FFFFFFFUUUUUUUUUUUU
