add kinda sus parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -471,3 +471,5 @@
   name: Pear Parrots
 - hd: hd/tinfoilhatparrot.gif
   name: Tin foil hat Parrot
+- hd: hd/kindasusparrot.gif
+  name: Kinda Sus Parrot
