Move turn down for watch to HD

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -467,7 +467,7 @@
 - gif: chefparrot.gif
   name: Chef parrot
   tip: Cooking parrot
-- gif: turndownforwatchparrot.gif
+- hd: hd/turndownforwatchparrot.gif
   name: Turn Down for Watch
 - gif: pear-parrots.gif
   name: Pear Parrots
