--- a/parrots.yaml
+++ b/parrots.yaml
@@ -467,6 +467,8 @@
 - gif: chefparrot.gif
   name: Chef parrot
   tip: Cooking parrot
+- hd: hd/turndownforwatchparrot.gif
+  name: Turn Down for Watch
 - gif: pear-parrots.gif
   name: Pear Parrots
 - hd: hd/tinfoilhatparrot.gif
