Add Ethereum Parrot
Cant let Bitcoin be the only Crypto Parrot 🤣

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -473,3 +473,5 @@
   name: Pear Parrots
 - hd: hd/tinfoilhatparrot.gif
   name: Tin foil hat Parrot
+- hd: hd/ethparrot.gif
+  name: Ethereum Parrot
