--- a/parrots.yaml
+++ b/parrots.yaml
@@ -473,5 +473,8 @@
   name: Pear Parrots
 - hd: hd/tinfoilhatparrot.gif
   name: Tin foil hat Parrot
+- hd: hd/mateparrot.gif
+  name: Mate Parrot
+  tip: South-american mate fan Parrot
 - hd: hd/ethparrot.gif
   name: Ethereum Parrot
