add kinda sus parrot (#522)
Co-authored-by: John Hobbs <john@velvetcache.org>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -464,6 +464,8 @@
 - hd: hd/imposterparrot.gif
   name: Imposter Parrot
   tip: Looks kinda sus
+- hd: hd/kindasusparrot.gif
+  name: Kinda Sus Parrot
 - gif: chefparrot.gif
   name: Chef parrot
   tip: Cooking parrot
