Adding Sneezy Parrot
This poor parrot can't stop blowing their beak into a tissue. Is it
allergies? A cold? All we know is that we hope they feel better soon.

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -480,3 +480,5 @@
   tip: South-american mate fan Parrot
 - hd: hd/ethparrot.gif
   name: Ethereum Parrot
+- gif: sneezyparrot.gif
+  name: Sneezy Parrot
