Add Party Guest 853.

--- a/guests.yaml
+++ b/guests.yaml
@@ -79,3 +79,5 @@
   tip: Ctrl + Shift + \\, 'Threa... FFFFFFFUUUUUUUUUUUU
 - gif: thegrokeparrot.gif
   name: The Groke Parrot
+- hd: hd/party853.gif
+  name: Party 853
