--- a/parrots.yaml
+++ b/parrots.yaml
@@ -482,3 +482,5 @@
   name: Ethereum Parrot
 - hd: hd/sneezyparrot.gif
   name: Sneezy Parrot
+- hd: hd/accessibleparrot.gif
+  name: Accessible Parrot
