Add reee parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -482,3 +482,6 @@
   name: Ethereum Parrot
 - hd: hd/sneezyparrot.gif
   name: Sneezy Parrot
+- hd: hd/reeeparrot.gif
+  name: Reee Parrot
+  tip: Reeeeeeeeeeeeeeeeeeeeeeeeeeeee
