--- a/parrots.yaml
+++ b/parrots.yaml
@@ -482,5 +482,8 @@
   name: Ethereum Parrot
 - hd: hd/sneezyparrot.gif
   name: Sneezy Parrot
+- gif: pythonparrot.gif
+  name: Python Parrot
 - hd: hd/redbullparrot.gif
   name: Redbull Parrot
+  
