--- a/guests.yaml
+++ b/guests.yaml
@@ -79,3 +79,6 @@
   tip: Ctrl + Shift + \\, 'Threa... FFFFFFFUUUUUUUUUUUU
 - gif: thegrokeparrot.gif
   name: The Groke Parrot
+- hd: hd/partygfm.gif
+  name: GFM Parrot
+  tip: The best Catherine streamer there is
