Change name on .yaml

--- a/guests.yaml
+++ b/guests.yaml
@@ -80,5 +80,5 @@
 - gif: thegrokeparrot.gif
   name: The Groke Parrot
 - hd: hd/partygfm.gif
-  name: GFM Parrot
+  name: Party GFM
   tip: The best Catherine streamer there is
