Add flag of Quebec

--- a/flags.yaml
+++ b/flags.yaml
@@ -314,6 +314,8 @@
   name: Puerto Rico
 - hd: hd/qatarparrot.gif
   name: Qatar
+- hd: hd/quebecparrot.gif
+  name: Quebec
 - hd: hd/republicofthecongoparrot.gif
   name: Republic of the Congo
 - hd: hd/romaniaparrot.gif
