Added party fsjal

--- a/guests.yaml
+++ b/guests.yaml
@@ -82,3 +82,5 @@
 - hd: hd/partygfm.gif
   name: Party GFM
   tip: The best Catherine streamer there is
+- hd: hd/partyfsjal.gif
+  name: Party fsjal
