Add race-condition parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -492,3 +492,5 @@
   name: Vue Parrot
 - hd: hd/sidewaysparrot.gif
   name: Sideways Parrot
+- hd: hd/raceconditionparrot.gif
+  name: Race Condition Parrot
