[FEAT] Add Balcony Parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -494,3 +494,5 @@
   name: Sideways Parrot
 - hd: hd/raceconditionparrot.gif
   name: Race Condition Parrot
+- hd: hd/balconyparrot.gif
+  name: Balcony Parrot
