Fixed Uruguay country name

--- a/flags.yaml
+++ b/flags.yaml
@@ -418,8 +418,8 @@
   name: United Kingdom
 - hd: hd/unitedstatesofamericaparrot.gif
   name: United States of America
-- hd: hd/uruguaryparrot.gif
-  name: Uruguary
+- hd: hd/uruguayparrot.gif
+  name: Uruguay
 - hd: hd/uzbekistanparrot.gif
   name: Uzbekistan
 - hd: hd/vanuatuparrot.gif
