Behold the Merge Conflict Parrot (#552)
* added merge parrot

* increased fps on merge parrot

* merge parrot to HD meld parrot

* merge conflict parrot

Co-authored-by: Elijah Bernstein-Cooper <ebernstein-cooper@lexile.com>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -499,4 +499,7 @@
 - hd: hd/zombieparrot.gif
   name: Zombie Parrot
   tip: Feel better soon little guy!
+- hd: hd/mergeconflictparrot.gif
+  name: Merge Conflict Parrot 
+  tip: Ruh roh
 
