--- a/parrots.yaml
+++ b/parrots.yaml
@@ -502,4 +502,5 @@
 - hd: hd/mergeconflictparrot.gif
   name: Merge Conflict Parrot 
   tip: Ruh roh
-
+- hd: hd/vaccineparrot.gif
+  name: Vaccine Parrot
