behold the thank you parrot

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -502,4 +502,7 @@
 - hd: hd/mergeconflictparrot.gif
   name: Merge Conflict Parrot 
   tip: Ruh roh
+- hd: hd/thankyouparrot.gif
+  name: Thank You Parrot
+  tip: Appreciate it
 
