Adding Vaccine Parrot (#553)
* Adding vaccine parrot

* Move to hd

* Add to yaml

Co-authored-by: John Hobbs <john@velvetcache.org>

--- a/parrots.yaml
+++ b/parrots.yaml
@@ -502,7 +502,8 @@
 - hd: hd/mergeconflictparrot.gif
   name: Merge Conflict Parrot 
   tip: Ruh roh
+- hd: hd/vaccineparrot.gif
+  name: Vaccine Parrot
 - hd: hd/thankyouparrot.gif
   name: Thank You Parrot
   tip: Appreciate it
-
